# Music-Style-Transfer

./: .gitignore  .pre-commit-config.yaml  README.md  demo_simple.py  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
demo/: streamlit_app.py
scripts/: evaluate.py  train.py
src/: __init__.py
src/data/: __init__.py
src/features/: audio_processor.py
src/losses/: __init__.py
src/models/: __init__.py  cnn_model.py  gan_model.py  transformer_model.py
src/training/: __init__.py  trainer.py
src/utils/: config.py  device.py
tests/: test_components.py
